image problem solved

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           </button>
           <a href="" class="link ms-4 d-none">See My Experiences</a>
         </div>
-        <div class="col-10 col-md-4 d-none d-md-block">
-          <img src="images/banner.jpg" class="img-fluid" alt="" />
+        <div class="col-10 col-md-4 items-center pt-4 d-md-block">
+          <img src="images/banner.jpg" class="img-fluid" alt="Image" />
         </div>
       </div>
     </section>
